oasis-macros/tests/ui/no_contract_impl.rs
oasis_std::contract! {

#[derive(Contract)]
pub struct Counter(u32);

}

fn main() {}
